--- a/grille-responsive.html
+++ b/grille-responsive.html
@@ -18,6 +18,7 @@
       <!--
         Bien que pratique pour custamiser la longeur de nos balises html, le systeme de grilles bootstrap prennent toute leur puissance dans leur caracteristiques reponsifs! Ainsi, chaque fois que nous allons ecrire une classe, nous allons pas besoin de rajouter des lignes dans notre fichier css pour definir des breakpoints etc. Nous allons juste a definir quel que classes bootstrap!
       -->
+      <h2> Example 1</h2>
       <div class="col-12 bg-primary border border-light">
          Ici, quoi que il en soit, je prendrai toujours 100% de la longeur de la page!
       </div>
@@ -26,6 +27,7 @@
        <!--
          Remarquer ce qui se passe ici! Nous disons que nous voulons une div avec qui prendra 50% de la page mais des que nous arrivons a notre breakpoint lg,nous allons commencer a prendre toute la longeur de la page 
        -->
+       <h2> Example 2</h2>
        <div class="col-6 col-lg-12 bg-primary border border-light">
             Ici, selon ma taille de l'ecran, ma longeur va changer! En plien ecran, je prendra toute la largeur de la page, mais en petit ecran, je ne prendrai seulment 50% de la largeur de la page!
        </div>
@@ -34,13 +36,13 @@
        <!--
          Plus souvent, on va vouloir prendre plus de longeur quand nos ecrans se retrcissent! Ici, je dis que nous allons prendre toute la page, mais que des que nous arrivons a la taille "lg" nous n'allons que prendre 50% de la longeur de la page
        -->
-
+       <h2> Example 3</h2>
        <div class="col-12 col-lg-6 bg-primary border border-light">
          Ici, en grande ecran, je ne prends que 50% de la page, mais en petit ecran, je prends la page entiere!
        </div>
 
        <br/>
-
+       <h2> Example 4</h2>
        <div class="col-12 col-md-8 col-lg-4 bg-primary border border-light">
         Ici, je change de taille chaque fois! Je commence par prendre 100% et a chaque breakpoint, je vais changer de longeur!
       </div>
