--- a/jour1-exo-correction/ex1.html
+++ b/jour1-exo-correction/ex1.html
@@ -11,5 +11,9 @@
             Trouvez un moyen d'afficher 3 divs. Ces 3 divs feront tous 75% de l'ecran lors que nous sommes sur un ecran en dessous de 576px mais des que nous allons depasser le 576 px, nous allons avoir une div qui prendra 100% de la page, une autre qui prendra 75% de la page et une autre qui prendra 50% de la page. La premiere div aura un fond de couleir vert, la deuxieme jaune, et la troisieme un bleu leger. Tous doit etre fait en utilisant les classes bootstrap!
         -->
 
+        <div class="bg-success col-9 col-sm-12"> Premiere div</div>
+        <div class="bg-warning col-9 col-sm-9"> Deuxieme div</div>
+        <div class="bg-info col-9 col-sm-6"> Troisieme div</div>
+        
     </body>
 </html>
