--- a/jour1-exo-correction/ex2.html
+++ b/jour1-exo-correction/ex2.html
@@ -11,6 +11,10 @@
             Creer deux divs et mettez les cote a cote. Chaque div fera 25% de la page. Lors que nous allons rentrer sur un ecran avec une largeur de plus de 992px, faites en sorte de decaler la 2eme div de 25% par rapport a la premiere div. La premiere div aura une couleur de fond blue foncé et la 2eme div aura une couleur de fond bleu leger
         -->
 
+        <div class="row">
+            <div class="col-3 bg-primary"> premiere div</div>
+            <div class="col-3 bg-info offset-lg-3"> deuxieme div</div>
+        </div>
 
        
 
