--- a/jour1-exo-correction/ex3.html
+++ b/jour1-exo-correction/ex3.html
@@ -10,7 +10,11 @@
         <!--
             Creer trois divs differents et mettez les cote a cote. Chaque div aura une largeur de 25%. Faites en sorte que lors que nous rentrons sur un ecran de moins de 768px, la premiere div ne sera plus visible. Mettez tous les trois divs avec un fond de couleur vert
         -->
-     
+        <div class="row">
+            <div class="col-3 d-none d-md-block bg-success"> Premiere div</div>
+            <div class="col-3 bg-success"> Deuxieme div</div>
+            <div class="col-3 bg-success"> Troisieme div</div>
+        </div>
       
 
     </body>
