--- a/jour1-exo-correction/ex4.html
+++ b/jour1-exo-correction/ex4.html
@@ -11,7 +11,11 @@
             Creer une div qui prend 75% de la page. Dans cette div, creer encore 3 div enfants les unes en dessous des autres. Le premier enfant prendra 75% de la page (comme son parent), le 2eme enfant prendra 75% de la larguer du premier enfant et le 3eme enfant prendra 50% de la largeur de son parent. Faites en sorte que lors que nous rentrons sur un ecran de moins de 576px, tous nos divs feront 75% du parent. Tous nos divs auront une couleur de fond bleu foncé. Mettez une bordure blanche autour de chaque div
         -->
 
-    
+      <div class="col-9">
+        <div class="col-9 col-sm-12 bg-primary border border-white"> Premiere div</div>
+        <div class="col-9 col-sm-9 bg-primary border border-white"> Deuxieme div</div>
+        <div class="col-9 col-sm-6 bg-primary border border-white"> Troisieme div</div>
+      </div>
         
 
     </body>
