--- a/colors.html
+++ b/colors.html
@@ -7,11 +7,12 @@
             <meta charset="utf-8">
             <meta name="viewport" content="width=device-width, initial-scale=1">
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+            <link rel="stylesheet" href="style/style.css"/>
     </head>
        <!--
          Si j'ai envie d'utiliser mes propres classes css, je peux preciser mon propre fichier css ici
        -->
-       <link rel="stylesheet" href="style/style.css"/>
+      
 
     <body>
       <!--
@@ -26,11 +27,12 @@
          2) Warning (jaune)
          3) Danger (rouge)
          4) info (bleu claire)
-         5) light (blanc)
+         5) light (gris trés leger)
          6) dark (noir)
          7)secondary (gris)
          8) success (vert)
-         9)mutes (pas sur comment decrire cette couleur)
+         9) mutes (pas sur comment decrire cette couleur)
+         10) white (blanc)
       -->
       <div class="bg-primary text-danger col text-center">
          Bonjour tout le monde, j'ai un fond bleu avec du texte en rouge (c'est pas tres beau!) Mais au moins je suis centré!
